--- a/projeto/feriados/core/templates/natal.html
+++ b/projeto/feriados/core/templates/natal.html
@@ -5,6 +5,10 @@
         <title>Feriado de Natal</title>
     </head>
     <body>
-        <h1>Não é natal</h1>
+        {% if natal %}
+            <h1>É natal</h1>
+        {% else %}
+            <h1>Não é natal</h1>
+        {% endif %}
     </body>
-</html>
+</html>     
